# webharvest

./: .gitignore  README.md  pyproject.toml
examples/: README.md  example.py
examples/mywebscrapper/: contextmanager.py  schemas.py  states.py  webscrapper.py
webharvest/: __init__.py  config.py  contextmanager.py  driver.py  exceptions.py  http.py  log.py  schemas.py  utils.py  webscrapper.py
